syntax = "proto3";

package examples.config.v1beta1;

message TunableStruct {
  string string_field = 1;
  double number_field = 2;
  bool boolean_field = 3;
}
